--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ justify-content: center;
     grid-row: 1 / 6;
     background-color: #A7DBD8;
     gap: 50px;
-    
+    max-width: 170px;
 }
 
 .site-navigation {
@@ -48,7 +48,7 @@ justify-content: center;
     display: grid;
     align-items: center;
     grid-template-columns: 1fr 3fr;
-    padding-left: 5px;
+    padding-left: 8px;
 }
 
 .settings {
@@ -60,7 +60,7 @@ justify-content: center;
     display: grid;
     align-items: center;
     grid-template-columns: 1fr 3fr;
-    padding-left: 5px;
+    padding-left: 8px;
 }
 
 
@@ -69,20 +69,20 @@ justify-content: center;
     display: grid;
     grid-template-columns: 4fr 1fr;
     grid-template-rows: auto;
-    
+    max-width: auto;
 }
 
 .projects {
     display: grid;
     gap: 6px;
-    grid-template-columns: 1fr 6fr;
-    grid-template-rows: repeat(3, min(1fr, 50%));
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
     grid-row: 2 / 6;
     padding: 4px;
 }
 
 .project-content {
+    display: grid;
+    align-items: center;
     background-color: #A7DBD8;
     text-align: center;
     padding: 12px;
