LAYOUT basics complete

--- a/style.css
+++ b/style.css
@@ -1,12 +1,23 @@
 
 * {
-    /* gap: 6px; */
+    margin: 0;
+    padding: 0;
+}
+
+.body {
+    margin: 0px;
+    padding: 0px;
+    border: 0cm;
 }
 
 .main {
   display: grid;
-  grid-template-columns: 1fr 4fr;
-
+  grid-template-columns: 1fr 6fr;
+  width: 100vw;
+  height: 100vh;
+  margin: 0px;
+  padding: 0px;
+  border: 0cm;
 }
 
 .header {
@@ -15,6 +26,7 @@
     display: grid;
     grid-template-columns: 1fr 2fr 2fr;
     gap: 6px;
+    height: 10vh;
 }
 
 .header-item {
@@ -36,7 +48,12 @@ justify-content: center;
     grid-row: 1 / 6;
     background-color: #A7DBD8;
     gap: 50px;
-    max-width: 170px;
+    width: 200px;
+    height: 100vh;
+}
+
+.sidebar-heading {
+    text-align: center;
 }
 
 .site-navigation {
@@ -69,15 +86,17 @@ justify-content: center;
     display: grid;
     grid-template-columns: 4fr 1fr;
     grid-template-rows: auto;
-    max-width: auto;
+    width: 100%;
 }
 
 .projects {
     display: grid;
-    gap: 6px;
-    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    gap: 15px;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
     grid-row: 2 / 6;
     padding: 4px;
+    height: 80vh;
+    padding: 4rem;
 }
 
 .project-content {
@@ -86,6 +105,8 @@ justify-content: center;
     background-color: #A7DBD8;
     text-align: center;
     padding: 12px;
+    height: 150px;
+    width: 150px;
 }
 
 .announcements {
@@ -93,7 +114,8 @@ justify-content: center;
     grid-row: 1 / 6;
     background-color: #F38630;
     gap: 6px;
-
+    width: 20vw;
+    height: 90vh;
 }
 
 
