--- a/style.css
+++ b/style.css
@@ -1,17 +1,20 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+
 
 * {
     margin: 0;
     padding: 0;
+    font-family: "Roboto", sans-serif;
 }
 
 .body {
-
+    
 }
 
 .main {
   display: grid;
-  grid-template-columns: 1fr 6fr;
-  width: 100vw;
+  grid-template: 1fr 6fr /1fr 4fr;
+  width: 98vw;
   height: 100vh;
   margin: 0px;
   padding: 0px;
@@ -24,7 +27,7 @@
     display: grid;
     grid-template-columns: 1fr 2fr 2fr;
     gap: 6px;
-    height: 10vh;
+    height: 15vh;
 }
 
 .header-item {
@@ -42,39 +45,42 @@
 }
 
 .sidebar {
-    display: grid;
-    grid-row: 1 / 6;
-    grid-template-rows: 20% 20% 20% 20% 20%;
+    grid-row: 1 / 7;
     background-color: #A7DBD8;
-    width: 17vw;
-/*     gap: 15%; */
-    max-width: 250px;
+    font-weight: bold;
+    width: 20vw;
+    gap: 15%;
     min-width: 170px;
     height: 100vh;
+    list-style: none;
+    place-items: center;
 }
 
 .sidebar-heading {
     grid-area: 1 / 1;
     margin-top: 20px;
     padding-left: 8px;
-    height: 10vh;
+    padding-top: 5vh;
+    padding-bottom: 5vh;
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+    align-items: center;
+    height: fit-content;
 }
 
 .site-navigation {
-    grid-row: 2 / 2;
-    display: grid;
+    padding-top: 8vh;
 }
 
 .side-content {
     display: grid;
     align-items: center;
     grid-template-columns: 1fr 3fr;
-    padding-left: 8px;
+    padding: 8px;
 }
 
 .settings {
-    display: grid;
-    padding-top: 40%;
+    padding-top: 40vh;
 }
 
 .settings-content {
@@ -82,7 +88,7 @@
     align-items: center;
     height: fit-content;
     grid-template-columns: 1fr 3fr;
-    padding-left: 8px;
+    padding: 8px;
 }
 
 
@@ -90,7 +96,7 @@
     background-color: #E0E4CC;
     display: grid;
     grid-template-columns: 5fr 2fr;
-    grid-template-rows: auto;
+    /* grid-template-rows: auto; */
     width: 100%;
 }
 
@@ -120,13 +126,13 @@
 
 .announcements {
     display: grid;
-    grid-row: 1 / 6;
+    grid-row: 1 / 7;
     grid-template-rows: 30% 30% 20% 30%;
     background-color: #F38630;
     gap: 6px;
     width: 23vw;
     min-width: 170px;
-    height: 90vh;
+    height: 70vh;
 }
 
 .announcements-feed {
