--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 .main {
   display: grid;
   grid-template: 1fr 6fr /1fr 4fr;
-  width: 98vw;
+  width: 99vw;
   height: 100vh;
   margin: 0px;
   padding: 0px;
@@ -27,7 +27,7 @@
     display: grid;
     grid-template-columns: 1fr 2fr 2fr;
     gap: 6px;
-    height: 15vh;
+    height: 14vh;
 }
 
 .header-item {
@@ -76,10 +76,11 @@
     align-items: center;
     grid-template-columns: 1fr 3fr;
     padding: 8px;
+    font-size: 18px;
 }
 
 .settings {
-    padding-top: 40vh;
+    padding-top: 10vh;
 }
 
 .settings-content {
@@ -97,6 +98,7 @@
     grid-template-columns: 5fr 2fr;
     /* grid-template-rows: 1fr; */
     width: 100%;
+    height: auto;
 }
 
 .projects-heading {
@@ -126,6 +128,7 @@
 .project-text {
     text-align: left;
     padding: 10px;
+
 }
 
 .project-text:first-line {
