--- a/style.css
+++ b/style.css
@@ -46,7 +46,6 @@ i {
 }
 
 
-
 .header-item {
     display: flex;
     align-items: center;
@@ -54,12 +53,18 @@ i {
 }
 
 .header-menu {
+    grid-area: 1 / 1 / 2 / 4;
     justify-content: flex-end;
     padding: 20px;
     margin-left: 10px;
 }
 
+.header-search {
+    grid-area: 1 / 1 / 2 / 2;
+}
+
 .search {
+/*     grid-area: 1 / 3; */
     flex-grow: 1;
     padding: 10px;
     border-radius: 20px;
@@ -79,7 +84,7 @@ input[type=text]:focus  {
 }
 
 .header-greeting {
-    grid-area: 2 / 2;
+    grid-area: 2 / 1 / span 2 / span 3;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -87,8 +92,16 @@ input[type=text]:focus  {
     padding-left: 20px;
 }
 
+.main-profile-pic {
+
+}
+
 .user-greeting {
     padding-left: 20px;
+}
+
+.user-name {
+    font-size: larger;
 }
 
 .header-buttons {
