--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 *:focus {outline:none !important}
 
 .body {
-    
+    /* width: 100vw; */
 }
 
 i {
@@ -27,7 +27,7 @@ i {
 .main {
   display: grid;
   grid-template: 1fr 6fr /1fr 4fr;
-  width: 100vw;
+  /* width: 100vw; */
   height: 100vh;
   margin: 0px;
   padding: 0px;
@@ -57,6 +57,7 @@ i {
     justify-content: flex-end;
     padding: 20px;
     margin-left: 10px;
+    margin-right: 20px;
 }
 
 .header-search {
@@ -109,13 +110,21 @@ input[type=text]:focus  {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    margin-right: 20px;
 }
 
 .quick-actions {
+    flex-grow: 1;
+    margin: 10px;
     padding: 10px;
-    border-radius: 10px;
+    border-radius: 30px;
     border-style: none;
     background-color: #E0E4CC;
+    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+}
+
+.quick-actions:active {
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
 
 /* LEFT side navigation bar */
@@ -126,7 +135,7 @@ input[type=text]:focus  {
     width: 20vw;
     gap: 15%;
     min-width: fit-content;
-    height: 100vh;
+    /* height: 100vh; */
     list-style: none;
     place-items: center;
 }
@@ -178,8 +187,7 @@ input[type=text]:focus  {
     background-color: #E0E4CC;
     display: grid;
     grid-template-columns: 5fr 2fr;
-    /* grid-template-rows: 1fr; */
-    width: 100%;
+/*     width: 100%; */
     box-shadow: inset 0 7px 9px -7px rgba(0,0,0,0.4);
 }
 
@@ -245,6 +253,7 @@ input[type=text]:focus  {
     grid-row: 1 / 7;
     background-color: #E0E4CC;
     padding: 5px;
+    padding-right: 30px;
     gap: 6px;
     width: 23vw;
     min-width: 170px;
@@ -252,37 +261,72 @@ input[type=text]:focus  {
 }
 
 
-
-
 /* The first feed on right side panel */
 
 .announcements-feed {
     display: grid;
-    align-items: center;
-    padding-left: 8px;
+/*     align-items: center; */
+    padding: 15px;
+    background-color: #A7DBD8;
+    border-radius: 10px;
 }
 
 .announcements-heading {
     display: grid;
     align-self: left;
-    padding: 2rem;
+    padding-top: 2rem;
+    padding-left: 1rem;
+    padding-bottom: 1rem;
 }
 
 .announcements-content {
-    display: grid;
-    text-align: center;
-    background-color: #A7DBD8;
+    align-items: center;
     gap: 10px;
-    width: 20vw;
-    min-width: 150px;
+    width: 15vw;
+    padding: 20px;
+    border-bottom: 1px solid #E0E4CC;
 }
+
+.announcements-content:last-of-type {
+    border-bottom: none;
+}
+
+.announcements-text {
+    
+}
+
+.announcement-text:first-line {
+    font-size: 14px;
+    font-weight: bold;
+    line-height: 30px;
+}
+
+hr.rounded {
+/*     border-top: 2px solid #bdbdbd;
+    margin: 10px; */
+  }
 
 /* Lower feed on right side panel */
 
 .trending-feed {
     display: grid;
     align-items: center;
+    background-color: #dff8f7;
     padding-left: 8px;
+    padding-top: 15px;
+    border-radius: 10px;
+}
+
+.trending-content {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    width: 15vw;
+    padding: 20px;
+}
+
+.profile {
+    font-size: large;
 }
 
 .footer {
