--- a/style.css
+++ b/style.css
@@ -53,19 +53,17 @@ i {
 }
 
 .header-menu {
-    grid-area: 1 / 1 / 2 / 4;
-    justify-content: flex-end;
+    grid-area: 1 / 3 / 2 / 4;
     padding: 20px;
     margin-left: 10px;
     margin-right: 20px;
 }
 
 .header-search {
-    grid-area: 1 / 1 / 2 / 2;
+    grid-area: 1 / 1 / 2 / 3;
 }
 
 .search {
-/*     grid-area: 1 / 3; */
     flex-grow: 1;
     padding: 10px;
     border-radius: 20px;
@@ -82,6 +80,13 @@ input[type=text]:focus  {
 
 .profile-pic {
     border-radius: 50%;
+    padding: 5px;
+}
+
+.header-user {
+    display: flex;
+    flex-direction: row;
+    margin: 5px;
 }
 
 .header-greeting {
@@ -98,7 +103,7 @@ input[type=text]:focus  {
 }
 
 .user-greeting {
-    padding-left: 20px;
+    padding-left: 5px;
 }
 
 .user-name {
